--- a/index.html
+++ b/index.html
@@ -14,19 +14,18 @@
 
 <body>
     <header>
-        <nav>
-            <a href="./index.html">WebStudio</a>
+        <nav class="header-nav">
+            <a href="./index.html" class="">WebStudio</a>
             <ul>
-                <li><a href="">Studio</a></li>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
+                <li class="li-item1"><a href="">Studio</a></li>
+                <li class="li-item1"><a href="">Portfolio</a></li>
+                <li class="li-item1"><a href="">Contacts</a></li>
             </ul>
         </nav>
-
-        <address>
+        <address class="header-addrees">
             <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                <li class="li-item1"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="li-item1"><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
@@ -37,7 +36,7 @@
             <button type="button" class="main-section-1-btn">Order Service</button>
         </section>
 
-        <section>
+        <section >
             <h2>Feature</h2>
             <ul>
                 <li>
@@ -65,25 +64,25 @@
             </ul>
         </section>
 
-        <section>
-            <h2>Our Team</h2>
+        <section class= "main-section-3">
+            <h2 class="main-section-3-mtxt">Our Team</h2>
             <ul>
-                <li>
+                <li class="li-item3">
                     <img src="./images/user_1.jpg" alt="mark guerrero" width="264">
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
-                <li>
+                <li class="li-item3">
                     <img src="./images/user_2.jpg" alt="tom ford" width="264">
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
-                <li>
+                <li class="li-item3">
                     <img src="./images/user_3.jpg" alt="camila garcia" width="264">
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
-                <li>
+                <li class="li-item3">
                     <img src="./images/user_4.jpg" alt="daniel wilson" width="264">
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
@@ -92,9 +91,9 @@
         </section>
     </main>
 
-    <footer>
-        <a href="./index.html">WebStudio</a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    <footer class="footer1">
+        <a href="./index.html" class="footer-logo">WebStudio</a>
+        <p class="footer-txt">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 
 </body>
