--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><goit-markup-hw-02></goit-markup-hw-2></title>
+    <title>goit-markup-hw-02</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
-
+</head>
 
 <body>
     <header>
         <nav class="header-nav">
-            <a href="./index.html" class="">WebStudio</a>
+            <a href="./index.html" class="header-logo-1">Web <span class="header-logo-1">Studio</span></a>
             <ul>
                 <li class="li-item1"><a href="">Studio</a></li>
                 <li class="li-item1"><a href="">Portfolio</a></li>
@@ -36,7 +36,7 @@
             <button type="button" class="main-section-1-btn">Order Service</button>
         </section>
 
-        <section >
+        <section>
             <h2>Feature</h2>
             <ul>
                 <li>
@@ -64,7 +64,7 @@
             </ul>
         </section>
 
-        <section class= "main-section-3">
+        <section class="main-section-3">
             <h2 class="main-section-3-mtxt">Our Team</h2>
             <ul>
                 <li class="li-item3">
@@ -93,7 +93,8 @@
 
     <footer class="footer1">
         <a href="./index.html" class="footer-logo">WebStudio</a>
-        <p class="footer-txt">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <p class="footer-txt">Increase the flow of customers and sales for your business with digital marketing & growth
+            solutions.</p>
     </footer>
 
 </body>
