--- a/index.html
+++ b/index.html
@@ -89,6 +89,48 @@
                 </li>
             </ul>
         </section>
+
+        <section class="main-section-4">
+            <h2 class="main-section-4-mtxt">Our Portfolio</h2>
+            <div>
+                <ul>
+                    <li class="li-item3">
+                        <img src="./images/portfolio_1.jpg" alt="Banking App" width="264">
+                        <h3>Banking App</h3>
+                        <p>App</p>
+                    </li>
+                    <li class="li-item3">
+                        <img src="./images/portfolio_2.jpg" alt="Cashless Payment" width="264">
+                        <h3>Cashless Payment</h3>
+                        <p>Marketing</p>
+                    </li>
+                    <li class="li-item3">
+                        <img src="./images/portfolio_3.jpg" alt="Meditaion App" width="264">
+                        <h3>Meditaion App</h3>
+                        <p>App</p>
+                    </li>
+                </ul>
+            </div>
+            <div>
+                <ul>
+                    <li class="li-item3">
+                        <img src="./images/portfolio_4.jpg" alt="Taxi Service" width="264">
+                        <h3>Taxi Service</h3>
+                        <p>UI Designer</p>
+                    </li>
+                    <li class="li-item3">
+                        <img src="./images/portfolio_5.jpg" alt="Screen Illustrations" width="264">
+                        <h3>Screen Illustrations</h3>
+                        <p>Design</p>
+                    </li>
+                    <li class="li-item3">
+                        <img src="./images/portfolio_6.jpg" alt="Online Courses" width="264">
+                        <h3>Online Courses</h3>
+                        <p>Marketing</p>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </main>
 
     <footer class="footer1">
