--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
     <title>goit-markup-hw-02</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <nav class="header-nav">
-            <a href="./index.html" class="header-logo-1">Web <span class="header-logo-1">Studio</span></a>
+            <a href="./index.html" class="header-logo-1">Web <span class="header-logo-2">Studio</span></a>
             <ul>
                 <li class="li-item1"><a href="">Studio</a></li>
                 <li class="li-item1"><a href="">Portfolio</a></li>
@@ -31,9 +32,9 @@
     </header>
 
     <main>
-        <section class="main-section-1">
-            <h1 class="main-section-1-txt">Effective Solutions for Your Business</h1>
-            <button type="button" class="main-section-1-btn">Order Service</button>
+        <section class="main-section1">
+            <h1 class="main-section1-txt">Effective Solutions for Your Business</h1>
+            <button type="button" class="main-section1-btn">Order Service</button>
         </section>
 
         <section>
