--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <header class="header">
         <nav class="header-nav">
-            <a  class="logo header-logo" href="./index.html">Web<span class="logo2">Studio</span></a>
+            <a class="logo header-logo" href="./index.html">Web<span class="logo2">Studio</span></a>
             <ul class="nav-list">
                 <li class="nav-item"><a class="nav-link" href="./index.html">Studio</a></li>
                 <li class="nav-item"><a class="nav-link" href="">Portfolio</a></li>
@@ -30,7 +30,8 @@
         </nav>
         <address class="header-addrees">
             <ul class="address-list">
-                <li class="address-item"><a class="address-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="address-item"><a class="address-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
                 <li class="address-item"><a class="address-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
@@ -140,7 +141,7 @@
     </main>
 
     <footer class="footer">
-        <a class="logo footer-logo" href="./index.html" >Web<span class="logo2">Studio</span></a>
+        <a class="logo footer-logo" href="./index.html">Web<span class="logo-studio">Studio</span></a>
         <p class="footer-txt">Increase the flow of customers and sales for your business with digital marketing & growth
             solutions.</p>
     </footer>
