check first section

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
     </header>
 
     <main>
-        <section class="main-section1">
-            <h1 class="main-section1-txt">Effective Solutions for Your Business</h1>
-            <button type="button" class="main-section1-btn">Order Service</button>
+        <section class="first-section">
+            <h1 class="first-section-txt">Effective Solutions for Your Business</h1>
+            <button type="button" class="first-section-btn">Order Service</button>
         </section>
 
         <section>
