--- a/index.html
+++ b/index.html
@@ -43,100 +43,99 @@
             <button type="button" class="first-section-btn">Order Service</button>
         </section>
 
-        <section>
-            <h2>Feature</h2>
-            <ul>
-                <li>
-                    <h3>Strategy</h3>
-                    <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.
+        <section class="second-section">
+            <h2 class="second-section-head">Feature</h2>
+            <ul class="second-section-list">
+                <li class="second-section-item">
+                    <h3 class="second-section-name">Strategy</h3>
+                    <p class="second-section-txt">Our goal is to identify the business problem to walk away with the
+                        perfect and creative solution.
                     </p>
                 </li>
-                <li>
-                    <h3>Punctuality</h3>
-                    <p>Bring the key message to the brand's audience for the best price within the shortest possible
+                <li class="second-section-item">
+                    <h3 class="second-section-name">Punctuality</h3>
+                    <p class="second-section-txt">Bring the key message to the brand's audience for the best price
+                        within the shortest possible
                         time.
                     </p>
                 </li>
-                <li>
-                    <h3>Diligence</h3>
-                    <p>Research and confirm brands with the strongest digital growth opportunities and minimize risk.
+                <li class="second-section-item">
+                    <h3 class="second-section-name">Diligence</h3>
+                    <p class="second-section-txt">Research and confirm brands with the strongest digital growth
+                        opportunities and minimize risk.
                     </p>
                 </li>
-                <li>
-                    <h3>Technologies</h3>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for
+                <li class="second-section-item">
+                    <h3 class="second-section-name">Technologies</h3>
+                    <p class="second-section-txt">Design practice focused on digital experiences. We bring forth a deep
+                        passion for
                         problem-solving.
                     </p>
                 </li>
             </ul>
         </section>
 
-        <section class="main-section-3">
-            <h2 class="main-section-3-mtxt">Our Team</h2>
-            <ul>
-                <li class="li-item3">
+        <section class="third-section">
+            <h2 class="third-section-head">Our Team</h2>
+            <ul class="third-section-list">
+                <li class="third-section-item">
                     <img src="./images/user_1.jpg" alt="mark guerrero" width="264">
-                    <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
+                    <h3 class="third-section-name">Mark Guerrero</h3>
+                    <p class="third-section-txt">Product Designer</p>
                 </li>
-                <li class="li-item3">
+                <li class="third-section-item">
                     <img src="./images/user_2.jpg" alt="tom ford" width="264">
-                    <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
+                    <h3 class="third-section-name">Tom Ford</h3>
+                    <p class="third-section-txt">Frontend Developer</p>
                 </li>
-                <li class="li-item3">
+                <li class="third-section-item">
                     <img src="./images/user_3.jpg" alt="camila garcia" width="264">
-                    <h3>Camila Garcia</h3>
-                    <p>Marketing</p>
+                    <h3 class="third-section-name">Camila Garcia</h3>
+                    <p class="third-section-txt">Marketing</p>
                 </li>
-                <li class="li-item3">
+                <li class="third-section-item">
                     <img src="./images/user_4.jpg" alt="daniel wilson" width="264">
-                    <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
+                    <h3 class="third-section-name">Daniel Wilson</h3>
+                    <p class="third-section-txt">UI Designer</p>
                 </li>
             </ul>
         </section>
 
-        <section class="main-section-4">
-            <h2 class="main-section-4-mtxt">Our Portfolio</h2>
-            <div>
-                <ul>
-                    <li class="li-item3">
-                        <img src="./images/portfolio_1.jpg" alt="Banking App" width="264">
-                        <h3>Banking App</h3>
-                        <p>App</p>
-                    </li>
-                    <li class="li-item3">
-                        <img src="./images/portfolio_2.jpg" alt="Cashless Payment" width="264">
-                        <h3>Cashless Payment</h3>
-                        <p>Marketing</p>
-                    </li>
-                    <li class="li-item3">
-                        <img src="./images/portfolio_3.jpg" alt="Meditaion App" width="264">
-                        <h3>Meditaion App</h3>
-                        <p>App</p>
-                    </li>
-                </ul>
-            </div>
-            <div>
-                <ul>
-                    <li class="li-item3">
-                        <img src="./images/portfolio_4.jpg" alt="Taxi Service" width="264">
-                        <h3>Taxi Service</h3>
-                        <p>UI Designer</p>
-                    </li>
-                    <li class="li-item3">
-                        <img src="./images/portfolio_5.jpg" alt="Screen Illustrations" width="264">
-                        <h3>Screen Illustrations</h3>
-                        <p>Design</p>
-                    </li>
-                    <li class="li-item3">
-                        <img src="./images/portfolio_6.jpg" alt="Online Courses" width="264">
-                        <h3>Online Courses</h3>
-                        <p>Marketing</p>
-                    </li>
-                </ul>
-            </div>
+        <section class="fourth-section">
+            <h2 class="fourth-section-head">Our Portfolio</h2>
+            <ul class="fourth-section-list">
+                <li class="fourth-section-item">
+                    <img src="./images/portfolio_1.jpg" alt="Banking App" width="264">
+                    <h3 class="fourth-section-name">Banking App</h3>
+                    <p class="fourth-section-txt">App</p>
+                </li>
+                <li class="fourth-section-item">
+                    <img src="./images/portfolio_2.jpg" alt="Cashless Payment" width="264">
+                    <h3 class="fourth-section-name">Cashless Payment</h3>
+                    <p class="fourth-section-txt">Marketing</p>
+                </li>
+                <li class="fourth-section-item">
+                    <img src="./images/portfolio_3.jpg" alt="Meditaion App" width="264">
+                    <h3 class="fourth-section-name">Meditaion App</h3>
+                    <p class="fourth-section-txt">App</p>
+                </li>
+                <li class="fourth-section-item">
+                    <img src="./images/portfolio_4.jpg" alt="Taxi Service" width="264">
+                    <h3 class="fourth-section-name">Taxi Service</h3>
+                    <p class="fourth-section-txt">UI Designer</p>
+                </li>
+                <li class="fourth-section-item">
+                    <img src="./images/portfolio_5.jpg" alt="Screen Illustrations" width="264">
+                    <h3 class="fourth-section-name">Screen Illustrations</h3>
+                    <p class="fourth-section-txt">Design</p>
+                </li>
+                <li class="fourth-section-item">
+                    <img src="./images/portfolio_6.jpg" alt="Online Courses" width="264">
+                    <h3 class="fourth-section-name">Online Courses</h3>
+                    <p class="fourth-section-txt">Marketing</p>
+                </li>
+            </ul>
+
         </section>
     </main>
 
